--- a/.config
+++ b/.config
@@ -3834,8 +3834,18 @@ CONFIG_PACKAGE_libxtables=y
 #
 # CONFIG_PACKAGE_qt5-core is not set
 # CONFIG_PACKAGE_qt5-network is not set
-# CONFIG_PACKAGE_qt5-sql is not set
 # CONFIG_PACKAGE_qt5-xml is not set
+# CONFIG_PACKAGE_qtbase is not set
+# CONFIG_QT5_INCLUDE_ATOMIC is not set
+
+#
+# Select Qtbase Libraries
+#
+
+#
+# Qtbase Libraries
+#
+# end of Select Qtbase Libraries
 # end of Qt5
 
 #
@@ -3845,6 +3855,7 @@ CONFIG_PACKAGE_libxtables=y
 # CONFIG_PACKAGE_libgnutls-dane is not set
 CONFIG_PACKAGE_libmbedtls=y
 # CONFIG_LIBMBEDTLS_DEBUG_C is not set
+CONFIG_LIBMBEDTLS_HAVE_ARMV8CE_AES=y
 # CONFIG_LIBMBEDTLS_HKDF_C is not set
 # CONFIG_PACKAGE_libnss is not set
 CONFIG_PACKAGE_libopenssl=y
@@ -4933,7 +4944,7 @@ CONFIG_POSTFIX_PCRE=y
 # CONFIG_PACKAGE_mktorrent is not set
 # CONFIG_PACKAGE_opentracker is not set
 # CONFIG_PACKAGE_opentracker6 is not set
-# CONFIG_PACKAGE_qBittorrent is not set
+# CONFIG_PACKAGE_qbittorrent is not set
 # CONFIG_PACKAGE_rtorrent is not set
 # CONFIG_PACKAGE_rtorrent-rpc is not set
 # CONFIG_PACKAGE_transmission-cli-openssl is not set
