--- a/shiyan.config
+++ b/shiyan.config
@@ -58,6 +58,8 @@ CONFIG_DEFAULT_base-files=y
 CONFIG_DEFAULT_block-mount=y
 CONFIG_DEFAULT_busybox=y
 CONFIG_DEFAULT_coremark=y
+CONFIG_DEFAULT_ddns-scripts_aliyun=y
+CONFIG_DEFAULT_ddns-scripts_dnspod=y
 CONFIG_DEFAULT_default-settings=y
 CONFIG_DEFAULT_dnsmasq-full=y
 CONFIG_DEFAULT_dropbear=y
@@ -100,7 +102,6 @@ CONFIG_DEFAULT_uci=y
 CONFIG_DEFAULT_uclient-fetch=y
 CONFIG_DEFAULT_urandom-seed=y
 CONFIG_DEFAULT_urngd=y
-CONFIG_DEFAULT_wget-ssl=y
 CONFIG_HAS_TESTING_KERNEL=y
 CONFIG_HAS_FPU=y
 CONFIG_AUDIO_SUPPORT=y
@@ -2939,18 +2940,18 @@ CONFIG_PERL_NOCOMMENT=y
 # CONFIG_PACKAGE_perlbase-autosplit is not set
 # CONFIG_PACKAGE_perlbase-autouse is not set
 # CONFIG_PACKAGE_perlbase-b is not set
-# CONFIG_PACKAGE_perlbase-base is not set
+CONFIG_PACKAGE_perlbase-base=y
 # CONFIG_PACKAGE_perlbase-benchmark is not set
 # CONFIG_PACKAGE_perlbase-bigint is not set
 # CONFIG_PACKAGE_perlbase-bignum is not set
 # CONFIG_PACKAGE_perlbase-blib is not set
-# CONFIG_PACKAGE_perlbase-bytes is not set
-# CONFIG_PACKAGE_perlbase-charnames is not set
-# CONFIG_PACKAGE_perlbase-class is not set
+CONFIG_PACKAGE_perlbase-bytes=y
+CONFIG_PACKAGE_perlbase-charnames=y
+CONFIG_PACKAGE_perlbase-class=y
 # CONFIG_PACKAGE_perlbase-compress is not set
 CONFIG_PACKAGE_perlbase-config=y
 # CONFIG_PACKAGE_perlbase-cpan is not set
-# CONFIG_PACKAGE_perlbase-cwd is not set
+CONFIG_PACKAGE_perlbase-cwd=y
 # CONFIG_PACKAGE_perlbase-data is not set
 # CONFIG_PACKAGE_perlbase-db is not set
 # CONFIG_PACKAGE_perlbase-db-file is not set
@@ -2961,22 +2962,22 @@ CONFIG_PACKAGE_perlbase-config=y
 # CONFIG_PACKAGE_perlbase-dirhandle is not set
 # CONFIG_PACKAGE_perlbase-dumpvalue is not set
 # CONFIG_PACKAGE_perlbase-dumpvar is not set
-# CONFIG_PACKAGE_perlbase-dynaloader is not set
+CONFIG_PACKAGE_perlbase-dynaloader=y
 # CONFIG_PACKAGE_perlbase-encode is not set
 # CONFIG_PACKAGE_perlbase-encoding is not set
 # CONFIG_PACKAGE_perlbase-english is not set
 # CONFIG_PACKAGE_perlbase-env is not set
-# CONFIG_PACKAGE_perlbase-errno is not set
+CONFIG_PACKAGE_perlbase-errno=y
 CONFIG_PACKAGE_perlbase-essential=y
 # CONFIG_PACKAGE_perlbase-experimental is not set
 # CONFIG_PACKAGE_perlbase-extutils is not set
 # CONFIG_PACKAGE_perlbase-fatal is not set
-# CONFIG_PACKAGE_perlbase-fcntl is not set
+CONFIG_PACKAGE_perlbase-fcntl=y
 # CONFIG_PACKAGE_perlbase-feature is not set
 # CONFIG_PACKAGE_perlbase-fields is not set
-# CONFIG_PACKAGE_perlbase-file is not set
+CONFIG_PACKAGE_perlbase-file=y
 # CONFIG_PACKAGE_perlbase-filecache is not set
-# CONFIG_PACKAGE_perlbase-filehandle is not set
+CONFIG_PACKAGE_perlbase-filehandle=y
 # CONFIG_PACKAGE_perlbase-filetest is not set
 # CONFIG_PACKAGE_perlbase-filter is not set
 # CONFIG_PACKAGE_perlbase-findbin is not set
@@ -2984,15 +2985,15 @@ CONFIG_PACKAGE_perlbase-essential=y
 # CONFIG_PACKAGE_perlbase-getopt is not set
 # CONFIG_PACKAGE_perlbase-hash is not set
 # CONFIG_PACKAGE_perlbase-http-tiny is not set
-# CONFIG_PACKAGE_perlbase-i18n is not set
+CONFIG_PACKAGE_perlbase-i18n=y
 # CONFIG_PACKAGE_perlbase-if is not set
-# CONFIG_PACKAGE_perlbase-integer is not set
-# CONFIG_PACKAGE_perlbase-io is not set
+CONFIG_PACKAGE_perlbase-integer=y
+CONFIG_PACKAGE_perlbase-io=y
 # CONFIG_PACKAGE_perlbase-ipc is not set
 # CONFIG_PACKAGE_perlbase-json-pp is not set
 # CONFIG_PACKAGE_perlbase-less is not set
-# CONFIG_PACKAGE_perlbase-list is not set
-# CONFIG_PACKAGE_perlbase-locale is not set
+CONFIG_PACKAGE_perlbase-list=y
+CONFIG_PACKAGE_perlbase-locale=y
 # CONFIG_PACKAGE_perlbase-math is not set
 # CONFIG_PACKAGE_perlbase-memoize is not set
 # CONFIG_PACKAGE_perlbase-meta-notation is not set
@@ -3006,23 +3007,23 @@ CONFIG_PACKAGE_perlbase-essential=y
 # CONFIG_PACKAGE_perlbase-open is not set
 # CONFIG_PACKAGE_perlbase-ops is not set
 # CONFIG_PACKAGE_perlbase-ostype is not set
-# CONFIG_PACKAGE_perlbase-params is not set
+CONFIG_PACKAGE_perlbase-params=y
 # CONFIG_PACKAGE_perlbase-perl5db is not set
 # CONFIG_PACKAGE_perlbase-perlio is not set
 # CONFIG_PACKAGE_perlbase-pod is not set
-# CONFIG_PACKAGE_perlbase-posix is not set
+CONFIG_PACKAGE_perlbase-posix=y
 CONFIG_PACKAGE_perlbase-re=y
 # CONFIG_PACKAGE_perlbase-safe is not set
-# CONFIG_PACKAGE_perlbase-scalar is not set
+CONFIG_PACKAGE_perlbase-scalar=y
 # CONFIG_PACKAGE_perlbase-sdbm-file is not set
 # CONFIG_PACKAGE_perlbase-search is not set
-# CONFIG_PACKAGE_perlbase-selectsaver is not set
+CONFIG_PACKAGE_perlbase-selectsaver=y
 # CONFIG_PACKAGE_perlbase-selfloader is not set
 # CONFIG_PACKAGE_perlbase-sigtrap is not set
-# CONFIG_PACKAGE_perlbase-socket is not set
+CONFIG_PACKAGE_perlbase-socket=y
 # CONFIG_PACKAGE_perlbase-sort is not set
 # CONFIG_PACKAGE_perlbase-storable is not set
-# CONFIG_PACKAGE_perlbase-symbol is not set
+CONFIG_PACKAGE_perlbase-symbol=y
 # CONFIG_PACKAGE_perlbase-sys is not set
 # CONFIG_PACKAGE_perlbase-tap is not set
 # CONFIG_PACKAGE_perlbase-term is not set
@@ -3030,15 +3031,15 @@ CONFIG_PACKAGE_perlbase-re=y
 # CONFIG_PACKAGE_perlbase-text is not set
 # CONFIG_PACKAGE_perlbase-thread is not set
 # CONFIG_PACKAGE_perlbase-threads is not set
-# CONFIG_PACKAGE_perlbase-tie is not set
+CONFIG_PACKAGE_perlbase-tie=y
 # CONFIG_PACKAGE_perlbase-time is not set
-# CONFIG_PACKAGE_perlbase-unicode is not set
+CONFIG_PACKAGE_perlbase-unicode=y
 CONFIG_PACKAGE_perlbase-unicore=y
 # CONFIG_PACKAGE_perlbase-universal is not set
 # CONFIG_PACKAGE_perlbase-user is not set
 CONFIG_PACKAGE_perlbase-utf8=y
 # CONFIG_PACKAGE_perlbase-version is not set
-# CONFIG_PACKAGE_perlbase-xsloader is not set
+CONFIG_PACKAGE_perlbase-xsloader=y
 # end of Perl
 
 #
@@ -6117,29 +6118,29 @@ CONFIG_PARTED_READLINE=y
 #
 # CONFIG_PACKAGE_acl is not set
 # CONFIG_PACKAGE_antfs-mount is not set
-# CONFIG_PACKAGE_attr is not set
+CONFIG_PACKAGE_attr=y
 # CONFIG_PACKAGE_badblocks is not set
 CONFIG_PACKAGE_btrfs-progs=y
-# CONFIG_BTRFS_PROGS_ZSTD is not set
-# CONFIG_PACKAGE_chattr is not set
+CONFIG_BTRFS_PROGS_ZSTD=y
+CONFIG_PACKAGE_chattr=y
 # CONFIG_PACKAGE_debugfs is not set
-# CONFIG_PACKAGE_dosfstools is not set
+CONFIG_PACKAGE_dosfstools=y
 # CONFIG_PACKAGE_dumpe2fs is not set
 # CONFIG_PACKAGE_e2freefrag is not set
 CONFIG_PACKAGE_e2fsprogs=y
 # CONFIG_PACKAGE_e4crypt is not set
 # CONFIG_PACKAGE_exfat-fsck is not set
 # CONFIG_PACKAGE_exfat-mkfs is not set
-# CONFIG_PACKAGE_f2fs-tools is not set
+CONFIG_PACKAGE_f2fs-tools=y
 # CONFIG_PACKAGE_f2fs-tools-selinux is not set
-# CONFIG_PACKAGE_f2fsck is not set
+CONFIG_PACKAGE_f2fsck=y
 # CONFIG_PACKAGE_f2fsck-selinux is not set
 # CONFIG_PACKAGE_filefrag is not set
 # CONFIG_PACKAGE_fstrim is not set
 # CONFIG_PACKAGE_fuse-utils is not set
 # CONFIG_PACKAGE_fuse3-utils is not set
 # CONFIG_PACKAGE_hfsfsck is not set
-# CONFIG_PACKAGE_lsattr is not set
+CONFIG_PACKAGE_lsattr=y
 CONFIG_PACKAGE_mkf2fs=y
 # CONFIG_PACKAGE_mkf2fs-selinux is not set
 # CONFIG_PACKAGE_mkhfs is not set
@@ -6159,9 +6160,9 @@ CONFIG_PACKAGE_mkf2fs=y
 # CONFIG_PACKAGE_sysfsutils is not set
 # CONFIG_PACKAGE_tune2fs is not set
 # CONFIG_PACKAGE_xfs-admin is not set
-# CONFIG_PACKAGE_xfs-fsck is not set
+CONFIG_PACKAGE_xfs-fsck=y
 # CONFIG_PACKAGE_xfs-growfs is not set
-# CONFIG_PACKAGE_xfs-mkfs is not set
+CONFIG_PACKAGE_xfs-mkfs=y
 # end of Filesystem
 
 #
@@ -6521,7 +6522,7 @@ CONFIG_DOCKER_STO_BTRFS=y
 # CONFIG_PACKAGE_gammu is not set
 CONFIG_PACKAGE_gawk=y
 # CONFIG_PACKAGE_gddrescue is not set
-# CONFIG_PACKAGE_getopt is not set
+CONFIG_PACKAGE_getopt=y
 # CONFIG_PACKAGE_giflib-utils is not set
 # CONFIG_PACKAGE_gkermit is not set
 # CONFIG_PACKAGE_gnuplot is not set
@@ -6741,3 +6742,5 @@ CONFIG_PACKAGE_uuidgen=y
 # CONFIG_PACKAGE_fontconfig is not set
 # end of Font-Utils
 # end of Xorg
+
+CONFIG_OVERRIDE_PKGS="kcptun"
